<resources>
    <string name="app_name">D_Cole_Android_UsersAndData</string>
    <string name="app_label">Xpense Me</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create An Account</string>
    <string name="log_in">Log In</string>
    <string name="account_log_in">Log In Your Account</string>
    <string name="hello">Hello, </string>
    <string name="save">Save</string>
    <string name="enter_your_expense">Enter Your Expense</string>
    <string name="enter_type">Type of Expense</string>
    <string name="enter_location">Business Name</string>
    <string name="enter_amount">Amount</string>
    <string name="enter_date">Date (MM/DD/YY)</string>
    <string name="your_last_expense">Your last expense:</string>
    <string name="delete">Delete</string>
</resources>
