<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="com.example.deoncole.d_cole_android_usersanddata.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:src="@drawable/backpackicon"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!--<EditText-->
            <!--android:id="@+id/userNameEt"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="text"-->
            <!--android:hint="@string/user_name"/>-->

        <EditText
            android:id="@+id/emailAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"/>

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/signUpBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/blueBackground"
                android:text="@string/create_account"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/hasAcctBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueBackground"
                android:background="@color/yellowBackground"
                android:text="@string/account_log_in"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/logInTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:visibility="gone"
            tools:text="Hello, person. Click to log in."/>

        <TextView
            android:id="@+id/verifiedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:visibility="gone"
            tools:text="CLick to verify your email"/>

        <Button
            android:id="@+id/verifyBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Verify Email"
            android:visibility="gone"/>

        <Button
            android:id="@+id/logInBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/blueBackground"
            android:background="@color/yellowBackground"
            android:text="@string/log_in"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/logOutTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                tools:text="If this isn't you sign up"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
